k8s/kustomize/components/dashboard/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdo-dashboard
  labels:
    app.kubernetes.io/component: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/component: dashboard
    spec:
      containers:
        - name: dashboard
          image: code-dot-org:latest
          imagePullPolicy: IfNotPresent
          command:
            - bin/dashboard-server
          args:
          tty: true
          resources:
            requests:
              cpu: 2
              memory: 8.00Gi
              ephemeral-storage: 30Gi
            limits:
              cpu: 2
              memory: 8.00Gi
              ephemeral-storage: 30Gi
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3000
            - name: http-hmr
              containerPort: 9000
          startupProbe:
            failureThreshold: 300
            periodSeconds: 1
            timeoutSeconds: 5
            httpGet:
              path: /health_check
              port: http
          readinessProbe:
            successThreshold: 2
            failureThreshold: 2
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              path: /health_check
              port: http
          livenessProbe:
            failureThreshold: 4
            periodSeconds: 30
            timeoutSeconds: 5
            httpGet:
              path: /health_check
              port: http
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      enableServiceLinks: false
