k8s/kustomize/components/dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdo-dashboard
  labels:
    app.kubernetes.io/component: dashboard
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdo-dashboard
                port:
                  name: http
